[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/playerBullet.png" type="Texture" id=1]
[ext_resource path="res://entities/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/muzflash.png" type="Texture" id=3]
[ext_resource path="res://assets/bulletCollision.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[node name="Node2D" type="RigidBody2D"]
collision_layer = 16
collision_mask = 9
gravity_scale = 0.0
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )

[node name="mainCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="destorySelfTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="muzSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="muzTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="collisionDieTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CollisionSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -1, 0 )
scale = Vector2( 1.5, 1.75 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Node2D_body_entered"]
[connection signal="timeout" from="destorySelfTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="muzTimer" to="." method="_on_muz_timeout"]
[connection signal="timeout" from="collisionDieTimer" to="." method="_on_collisionDieTimer_timeout"]
